# arango-schema-extractor

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  integration.yml  publish.yml
docs/: DOWNSTREAM-NOTES-ARANGO-CYPHER-PY.md  OWL-FOR-CONCEPTUAL-SCHEMA.md  PRD.md  transpiler-integration.md
docs/csi/v1/: csi.schema.json
docs/tool-contract/v1/: README.md  request.schema.json  response.schema.json
docs/tool-contract/v1/examples/: request.analyze.json
domains/: README.md
schema_analyzer/: __init__.py  _arango.py  analyzer.py  arango_products.py  baseline.py  cache.py  cli.py  conceptual.py  defaults.py  diff.py  docs.py  domain_detect.py  enrichment.py  errors.py  exports.py  graph_membership.py  graphrag.py  mapping.py  mcp_server.py  metric_history.py  multitenancy.py  owl_export.py  provenance.py  quality.py  rdf_topology.py  reconcile.py  redaction.py  shard_families.py  sharding_profile.py  snapshot.py  statistics.py  tenant_scope.py  tool.py  tool_contract_v1.py  type_detection.py  types.py  utils.py  validation.py  vci.py  workflow.py
schema_analyzer/csi/: __init__.py
schema_analyzer/eval/: __init__.py  calibration.py  domain_loader.py  generator.py  runner.py  scoring.py
schema_analyzer/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py  openrouter_provider.py
schema_analyzer/tool_contract/: __init__.py
schema_analyzer/tool_contract/v1/: __init__.py  request.schema.json  response.schema.json
scripts/: run_reverse_engineering_eval.py
tests/: conftest.py  test_analyzer_async.py  test_analyzer_degrades_gracefully.py  test_analyzer_with_mock_provider.py  test_arango_products.py  test_baseline_inference.py  test_cache.py  test_cli_convenience.py  test_cli_extended.py  test_cli_unit.py  test_conceptual.py  test_csi.py  test_defaults.py  test_diff.py  test_docs.py  test_domain_detect.py  test_eval_calibration.py  test_exports.py  test_fingerprint.py  test_gold_comparison.py  test_graph_membership.py  test_graphrag.py  test_index_flags_vci_deduplicate.py  test_index_property_mapping.py  test_mapping.py  test_mcp_server.py  test_metric_history.py  test_multi_type_edge_detection.py  test_multitenancy.py  test_openrouter_provider.py  test_owl_export.py  test_phase2_helpers.py  test_provenance.py  test_providers_registry.py  test_quality.py  test_rdf_topology.py  test_reconcile.py  test_redaction.py  test_scoring_domain_range_and_mapping.py  test_shard_families.py  (+17 more)
tests/fixtures/: graphrag_snapshot.json  high_cardinality_snapshot.json
tests/fixtures/datasets/movies/: hybrid-data.json  lpg-data.json  pg-data.json
tests/integration/: datasets.py  test_domains_end_to_end.py  test_neo4j_movies.py  test_tool_end_to_end.py
