[project]
name = "arangodb-schema-analyzer"
version = "0.1.0"
description = "Agentic schema analyzer for ArangoDB: conceptual model + conceptual-to-physical mapping for transpilers."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = []
dependencies = [
  "python-arango>=8.1.1",
  "pydantic>=2.6.0",
  "jsonschema>=4.21.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.25.0"]
openrouter = []  # uses stdlib urllib; listed for feature discoverability
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
]

[project.urls]
Homepage = ""
Repository = ""

[project.scripts]
arangodb-schema-analyzer = "schema_analyzer.cli:main"

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: requires a running ArangoDB (typically via docker compose)"
]
addopts = "--cov=schema_analyzer --cov-report=term-missing --cov-fail-under=60"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["schema_analyzer"]

