[project]
name = "arangodb-schema-analyzer"
version = "0.8.0"
description = "Agentic schema analyzer for ArangoDB: conceptual model + conceptual-to-physical mapping for transpilers."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "Arthur Keen" },
]
maintainers = [
  { name = "Arthur Keen" },
]
keywords = [
  "arangodb",
  "schema",
  "graph",
  "conceptual-model",
  "ontology",
  "transpiler",
  "cypher",
  "sparql",
  "owl",
  "llm",
  "mcp",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Database",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "python-arango>=8.1.1",
  "pydantic>=2.6.0",
  "jsonschema>=4.21.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.25.0"]
openrouter = []  # uses stdlib urllib; listed for feature discoverability
mcp = ["mcp>=1.2.0"]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/ArthurKeen/arango-schema-mapper"
Repository = "https://github.com/ArthurKeen/arango-schema-mapper"
Issues = "https://github.com/ArthurKeen/arango-schema-mapper/issues"
Changelog = "https://github.com/ArthurKeen/arango-schema-mapper/blob/main/CHANGELOG.md"

[project.scripts]
arangodb-schema-analyzer = "schema_analyzer.cli:main"
arangodb-schema-analyzer-mcp = "schema_analyzer.mcp_server:main"

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: requires a running ArangoDB (typically via docker compose)"
]
addopts = "--cov=schema_analyzer --cov-report=term-missing"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.hatch.build.targets.wheel]
packages = ["schema_analyzer"]

[tool.hatch.build.targets.sdist]
# Strict allow-list: only these paths go into the sdist.
only-include = [
  "schema_analyzer",
  "docs/tool-contract",
  "docs/csi",
  "README.md",
  "CHANGELOG.md",
  "CONTRIBUTING.md",
  "SECURITY.md",
  "LICENSE",
  "pyproject.toml",
]
